--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
                     <!-- MainClass in mainfest make a executable jar -->
                     <archive>
                         <manifest>
-                            <mainClass>com.mkyong.core.utils.App</mainClass>
+                            <mainClass>Main</mainClass>
                         </manifest>
                     </archive>
 
